[package]
name = "engine-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
profiling = ["dep:tracy-client"]
backtrace = ["engine-core/backtrace"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
glam = "0.31"
winit = "0.30"
tracing = "0.1"
smallvec = "1.13"
lazy_static = "1.5"
engine-core = { path = "../core" }
engine-macros = { path = "../macros" }
raw-window-handle = "0.6"
tracy-client = { version = "0.17", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tracing-subscriber = "0.3"

[build-dependencies]
engine-build-utils = { path = "../build-utils" }
# TODO: Add shaderc when implementing shader module (requires ninja)
# shaderc = "0.8"

[[bench]]
name = "vulkan_context_bench"
harness = false

[[bench]]
name = "window_bench"
harness = false

[[bench]]
name = "simple_benches"
harness = false
