[package]
name = "engine-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
profiling = ["dep:tracy-client"]
backtrace = ["engine-core/backtrace"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
glam = { workspace = true }
winit = "0.30"
tracing = "0.1"
smallvec = "1.13"
lazy_static = "1.5"
bytemuck = "1.14"
engine-core = { path = "../core" }
engine-assets = { path = "../assets" }
engine-macros = { path = "../macros" }
engine-render-context = { path = "../render-context" }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_LibraryLoader",
] }
tracy-client = { version = "0.17", optional = true, default-features = false }

# Agentic debugging dependencies (Phase 1.6.R)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.30", features = ["bundled"] }
png = "0.17"

# Frame capture dependencies (Phase 1.9)
image = "0.25"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tracing-subscriber = "0.3"
tempfile = "3.8"

[build-dependencies]
engine-build-utils = { path = "../build-utils" }
# No dependencies needed for build.rs (uses std::process::Command)

[[bench]]
name = "vulkan_context_bench"
harness = false

[[bench]]
name = "window_bench"
harness = false

[[bench]]
name = "simple_benches"
harness = false

[[bench]]
name = "robust_benches"
harness = false

[[bench]]
name = "stable_benches"
harness = false

[[bench]]
name = "gpu_cache_benches"
harness = false

[[bench]]
name = "gpu_performance_comprehensive"
harness = false

[[bench]]
name = "gpu_aaa_rendering"
harness = false

[[bench]]
name = "capture_benches"
harness = false

[[bench]]
name = "asset_upload_benches"
harness = false
