[package]
name = "engine-shared-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# This crate only exists for tests and benchmarks
path = "src/lib.rs"

[[test]]
name = "integration_simd_test"
path = "tests/integration_simd_test.rs"
harness = true

[[test]]
name = "prediction_tests"
path = "tests/prediction_tests.rs"
harness = true

[[test]]
name = "aaa_plus_stress_tests"
path = "tests/aaa_plus_stress_tests.rs"
harness = true

[[test]]
name = "audio_ecs_integration"
path = "tests/audio_ecs_integration.rs"
harness = true

[[test]]
name = "serialization_property_tests"
path = "tests/serialization_property_tests.rs"
harness = true

[[test]]
name = "asset_rendering_integration"
path = "tests/asset_rendering_integration.rs"
harness = true

[[bench]]
name = "integration_bench"
path = "benches/integration_bench.rs"
harness = false

[[bench]]
name = "physics_integration_comparison"
path = "benches/physics_integration_comparison.rs"
harness = false

[[bench]]
name = "prediction_benches"
path = "benches/prediction_benches.rs"
harness = false

[[bench]]
name = "audio_ecs_bench"
path = "benches/audio_ecs_bench.rs"
harness = false

[dependencies]
engine-core = { path = "../core" }
engine-math = { path = "../math" }
engine-physics = { path = "../physics" }
engine-audio = { path = "../audio" }
engine-assets = { path = "../assets" }
engine-renderer = { path = "../renderer" }
glam = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
bincode = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
