[package]
name = "engine-shared-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# This crate only exists for tests and benchmarks
path = "src/lib.rs"

[[test]]
name = "integration_simd_test"
path = "tests/integration_simd_test.rs"
harness = true

[[test]]
name = "prediction_tests"
path = "tests/prediction_tests.rs"
harness = true

[[test]]
name = "aaa_plus_stress_tests"
path = "tests/aaa_plus_stress_tests.rs"
harness = true

[[test]]
name = "audio_ecs_integration"
path = "tests/audio_ecs_integration.rs"
harness = true

[[test]]
name = "serialization_property_tests"
path = "tests/serialization_property_tests.rs"
harness = true

[[test]]
name = "asset_rendering_integration"
path = "tests/asset_rendering_integration.rs"
harness = true

[[test]]
name = "e2e_simple_test"
path = "tests/e2e_simple_test.rs"
harness = true

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"
harness = true

[[test]]
name = "template_ecs_integration"
path = "tests/template_ecs_integration.rs"
harness = true

[[test]]
name = "physics_rendering_test"
path = "tests/physics_rendering_test.rs"
harness = true

[[test]]
name = "ecs_rendering_integration"
path = "tests/ecs_rendering_integration.rs"
harness = true

[[test]]
name = "performance_stress_tests"
path = "tests/performance_stress_tests.rs"
harness = true

[[test]]
name = "memory_leak_detection"
path = "tests/memory_leak_detection.rs"
harness = true

# Networking integration tests
[[test]]
name = "delta_integration_test"
path = "tests/networking/delta_integration_test.rs"
harness = true

[[test]]
name = "network_replication_test"
path = "tests/networking/network_replication_test.rs"
harness = true

[[test]]
name = "interest_management_test"
path = "tests/networking/interest_management_test.rs"
harness = true

[[test]]
name = "interest_integration_advanced_test"
path = "tests/networking/interest_integration_advanced_test.rs"
harness = true

[[test]]
name = "interest_edge_cases_test"
path = "tests/networking/interest_edge_cases_test.rs"
harness = true

[[test]]
name = "interest_mmo_scenarios_test"
path = "tests/networking/interest_mmo_scenarios_test.rs"
harness = true

[[test]]
name = "auth_encryption_integration_test"
path = "tests/networking/auth_encryption_integration_test.rs"
harness = true

[[test]]
name = "interpolation_integration_test"
path = "tests/networking/interpolation_integration_test.rs"
harness = true

[[test]]
name = "server_loop_test"
path = "tests/networking/server_loop_test.rs"
harness = true

[[test]]
name = "world_streaming_integration_test"
path = "tests/networking/world_streaming_integration_test.rs"
harness = true

[[test]]
name = "hot_reload_live_tests"
path = "tests/hot_reload_live_tests.rs"
harness = true
required-features = ["hot-reload"]

[[bench]]
name = "integration_bench"
path = "benches/integration_bench.rs"
harness = false

[[bench]]
name = "physics_integration_comparison"
path = "benches/physics_integration_comparison.rs"
harness = false

[[bench]]
name = "prediction_benches"
path = "benches/prediction_benches.rs"
harness = false

[[bench]]
name = "audio_ecs_bench"
path = "benches/audio_ecs_bench.rs"
harness = false

[[bench]]
name = "e2e_connectivity_bench"
path = "benches/e2e_connectivity_bench.rs"
harness = false

[features]
hot-reload = ["engine-assets/hot-reload"]

[dependencies]
engine-core = { path = "../core" }
engine-math = { path = "../math" }
engine-physics = { path = "../physics" }
engine-audio = { path = "../audio" }
engine-assets = { path = "../assets" }
engine-renderer = { path = "../renderer" }
engine-networking = { path = "../networking" }
engine-templating = { path = "../templating" }
glam = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
bincode = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
tempfile = "3.8"
serde_yaml = "0.9"
rustc-hash = "1.1"
