[package]
name = "engine-templating"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "engine_templating"

[dependencies]
# Core dependencies
engine-core = { path = "../core" }
engine-macros = { path = "../macros" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"

# Utilities
tracing = "0.1"
thiserror = "1.0"

# HashMap
rustc-hash = "2.0"

# Hashing for checksums
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "template_loading"
harness = false

[[bench]]
name = "template_validation"
harness = false

[[bench]]
name = "template_spawning"
harness = false

[[bench]]
name = "hot_reload"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "component_parsing"
harness = false

[[bench]]
name = "profiling_analysis"
harness = false

[[bench]]
name = "optimization_comparison"
harness = false

[lints]
workspace = true
