[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]

[workspace.dependencies]
engine-core = { path = "../../engine/core" }
engine-networking = { path = "../../engine/networking" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[package]
name = "mmorpg-demo"
version.workspace = true
edition.workspace = true

[dependencies]
engine-core.workspace = true
engine-networking.workspace = true
mmorpg-shared = { path = "shared" }
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
