[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agent Game Engine Team"]

[workspace.dependencies]
# Shared dependencies across workspace
# agent-game-engine = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
# Add other common dependencies for MOBA features
