[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]

[workspace.dependencies]
# Shared dependencies across workspace
# silmaril = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
# Add other common dependencies for MOBA features
