[package]
name = "turn-based-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add agent-game-engine dependency here
# agent-game-engine = { path = "../../" }

# Common game development dependencies
# serde = { version = "1.0", features = ["derive"] }
# pathfinding = "4.0"  # For grid pathfinding
