[package]
name = "silmaril_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Client binary for Silmaril"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
# Core engine
engine-core = { path = "../../core" }
engine-renderer = { path = "../../renderer" }
engine-networking = { path = "../../networking" }

# Macros
engine-macros = { path = "../../macros" }

# Math
glam = { version = "0.29", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["client"]
client = []

# Optional features
headless = []          # Run without rendering
frame_capture = []     # Enable frame capture for agents

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1  # Faster builds, still somewhat optimized
